--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.1",
     "@google/genai": "^1.31.0",
     "lucide-react": "^0.555.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
