--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables (Never commit this!)
+# Environment variables (Critico: no subir esto)
 .env
 .env.*
 !.env.example
