--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.344.0",
     "react-markdown": "^9.0.1",
     "@supabase/supabase-js": "^2.39.7",
-    "@google/genai": "^0.1.1"
+    "@google/genai": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
